[package]
name = "starknet-client-sdk"
version = "0.1.0"
edition = "2024"

[[example]]
name = "mint"
path = "examples/mint.rs"

[[example]]
name = "event_listener"
path = "examples/event_listener.rs"

[dependencies]
starknet = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
anyhow = "1.0"
crypto-bigint = "0.5.1"
async-trait = "0.1"
hex = "0.4.3"